--- a/catalog-spring-boot/xebialabs/work/application.properties
+++ b/catalog-spring-boot/xebialabs/work/application.properties
@@ -4,4 +4,4 @@ spring.application.name=catalog
 spring.datasource.url={{catalog.db.url}}
 spring.datasource.username={{catalog.db.username}}
 spring.datasource.password={{catalog.db.password}}
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name={{catalog.db.driver}}
