--- a/catalog-spring-boot/xebialabs/package/application.properties
+++ b/catalog-spring-boot/xebialabs/package/application.properties
@@ -1,17 +1,15 @@
 #https://developers.redhat.com/blog/2017/10/03/configuring-spring-boot-kubernetes-configmap/
 spring.application.name=catalog
-
 #jdbc:postgresql://localhost/catalogdb
 spring.datasource.url={{catalog.db.url}}
 spring.datasource.username={{catalog.db.username}}
 spring.datasource.password={{catalog.db.password}}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # create and drop tables and sequences, loads import.sql
 # You can set spring.jpa.hibernate.ddl-auto explicitly and
 # the standard Hibernate property values are none, validate, update, create, and create-drop
 spring.jpa.hibernate.ddl-auto=create
-
 # Spring Boot automatically creates the schema of an embedded DataSource.
 # This behavior can be customized by using the spring.datasource.initialization-mode property
 # (and it can also be always or never).
