--- a/cart-spring-boot/xebialabs/package/deploymentconfig-cart.yaml
+++ b/cart-spring-boot/xebialabs/package/deploymentconfig-cart.yaml
@@ -27,7 +27,7 @@ spec:
         - name: APPLICATION_MODE
           value: prod
         image: {{REGISTRY}}/coolstore-dev/cart:@APP_VERSION@
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 5
           httpGet:
@@ -70,13 +70,4 @@ spec:
       securityContext: {}
       terminationGracePeriodSeconds: 75
   triggers:
-  - imageChangeParams:
-      automatic: true
-      containerNames:
-      - cart
-      from:
-        kind: ImageStreamTag
-        name: cart:@APP_VERSION@
-        namespace: coolstore-dev
-    type: ImageChange
   - type: ConfigChange
