add doc + yaml for corner ribbon

--- a/web-nodejs/xebialabs/package/deploymentconfig-web-ui.yaml
+++ b/web-nodejs/xebialabs/package/deploymentconfig-web-ui.yaml
@@ -31,6 +31,10 @@ spec:
           value: web-ui:8080
         - name: COMPONENT_VERSION
           value: v@APP_VERSION@
+        - name: ENVIRONMENT
+          value: {{ENVIRONMENT}}
+        - name: ENVIRONMENT_COLOR
+          value: {{ENVIRONMENT_COLOR}}
         image: {{REGISTRY}}/coolstore-dev/web-ui:@APP_VERSION@
         imagePullPolicy: Always
         livenessProbe:
