--- a/web-nodejs/xebialabs/package/deploymentconfig-web-ui-2.yaml
+++ b/web-nodejs/xebialabs/package/deploymentconfig-web-ui-2.yaml
@@ -7,15 +7,11 @@ metadata:
   name: web-ui
 spec:
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     deploymentconfig: web-ui
   strategy:
-    activeDeadlineSeconds: 21600
-    recreateParams:
-      timeoutSeconds: 600
     resources: {}
-    type: Recreate
+    type: Rolling
   template:
     metadata:
       labels:
@@ -28,16 +24,15 @@ spec:
         - name: KUBERNETES_NAMESPACE
           valueFrom:
             fieldRef:
-              apiVersion: v1
               fieldPath: metadata.namespace
-        - name: COOLSTORE_GW_SERVICE
+        - name: COOLSTORE_GW_ENDPOINT
           value: gw-coolstore-{{env}}
         - name: HOSTNAME_HTTP
           value: web-ui:8080
-        - name: ENVIRONMENT
-          value: {{ENVIRONMENT}}
         - name: COMPONENT_VERSION
           value: v@APP_VERSION@
+        - name: ENVIRONMENT
+          value: {{ENVIRONMENT}}
         - name: ENVIRONMENT_COLOR
           value: {{ENVIRONMENT_COLOR}}
         image: {{REGISTRY}}/coolstore-dev/web-ui:@APP_VERSION@
@@ -74,10 +69,8 @@ spec:
             cpu: 50m
             memory: 128Mi
         terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
-      schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
   triggers:
@@ -87,8 +80,7 @@ spec:
       - web-ui
       from:
         kind: ImageStreamTag
-        name: web-ui:latest
+        name: web-ui:@APP_VERSION@
         namespace: coolstore-dev
     type: ImageChange
   - type: ConfigChange
-
