--- a/catalog-spring-boot/xebialabs/package/deploymentconfig-catalog-postgresql.yaml
+++ b/catalog-spring-boot/xebialabs/package/deploymentconfig-catalog-postgresql.yaml
@@ -9,6 +9,7 @@ metadata:
   name: catalog-postgresql
 spec:
   replicas: 1
+  revisionHistoryLimit: 2
   selector:
     deploymentconfig: catalog-postgresql
   strategy:
