--- a/inventory-wildfly-swarm/xebialabs/package/deploymentconfig-inventory.yaml
+++ b/inventory-wildfly-swarm/xebialabs/package/deploymentconfig-inventory.yaml
@@ -7,6 +7,7 @@ metadata:
   name: inventory
 spec:
   replicas: 1
+  revisionHistoryLimit: 2
   selector:
     deploymentconfig: inventory
   strategy:
